--- a/package.json
+++ b/package.json
@@ -1,13 +1,23 @@
 {
+  "name": "HQHB-backend",
+  "version": "1.0.0",
+  "description": "API for your full-stack application",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
   "dependencies": {
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "helmetjs": "^0.1.6",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^7.0.0",
-    "mongoose": "^9.0.0",
+    "mongoose": "^9.0.0"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.11"
   }
 }
